--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,19 @@
-require: rubocop-rails
-AllCops:
-  SuggestExtensions: false
+inherit_from: .rubocop_todo.yml
 Metrics/BlockLength:
   Exclude:
     - "config/environments/development.rb"
+Style/AsciiComments:
+  Enabled: false
+Style/Documentation:
+  Enabled: false
+AllCops:
+  TargetRubyVersion: 3.1
+  NewCops: enable
+Rails/BulkChangeTable:
+  Enabled: false
+require:
+  - rubocop-ast
+  - rubocop-rails
+  - rubocop-rake
+  - rubocop-rspec
+  - rubocop-performance
