--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@hotwired/turbo-rails": "^8.0.4",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.23.0",
+    "franken-ui": "^0.1.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6"
   },
